--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
     <!-- /header_top -->
     <div class="header_main_menu">
         <div class="site_logo">
-            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png"></a>
+            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png" style="height: 60px"></a>
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
