--- a/tufreefast.html
+++ b/tufreefast.html
@@ -2,274 +2,268 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
-	<meta charset="UTF-8">
-	<title>免tu快速批核</title>
-	<link rel="shortcut icon" href="assets/img/logo/ficon.png" type="image/x-icon">
-	<meta name="author" content="themexriver">
-	<meta name="description" content="Rexlaw - Law Attorney HTML Template">
-	<meta name="keywords" content="	accountant, adviser, advocate, attorney, barrister, business, consultant, counsel, finance, justice, law, law firm, lawyer, legal, solicitor">
-	<!-- Mobile Specific Meta -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>免tu快速批核</title>
+    <link href="assets/img/logo/ficon.png" rel="shortcut icon" type="image/x-icon">
+    <meta content="themexriver" name="author">
+    <meta content="Rexlaw - Law Attorney HTML Template" name="description">
+    <meta content="	accountant, adviser, advocate, attorney, barrister, business, consultant, counsel, finance, justice, law, law firm, lawyer, legal, solicitor"
+          name="keywords">
+    <!-- Mobile Specific Meta -->
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
-	<link rel="stylesheet" href="assets/css/owl.carousel.css">
-	<link rel="stylesheet" href="assets/css/fontawesome-all.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel="stylesheet" href="assets/css/flaticon.css">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/video.min.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-	<style>
-		/* For Desktop View */
-		@media screen and (min-width: 1024px) {
-			.header-title{
-				font-size: 45px;
-				line-height: 65px;
-			}
-		}
+    <link href="assets/css/owl.carousel.css" rel="stylesheet">
+    <link href="assets/css/fontawesome-all.css" rel="stylesheet">
+    <link href="assets/css/animate.css" rel="stylesheet">
+    <link href="assets/css/flaticon.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/video.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <style>
+        /* For Desktop View */
+        @media screen and (min-width: 1024px) {
+        }
 
-		/* For Tablet View */
-		@media screen and (min-device-width: 768px)
-		and (max-device-width: 1024px) {
-			.header-title{
-				font-size: 38px;
-				line-height: 70px;
-			}
-		}
+        /* For Tablet View */
+        @media screen and (min-device-width: 768px)
+        and (max-device-width: 1024px) {
+        }
 
-		/* For Mobile Portrait View */
-		@media screen and (max-device-width: 480px) {
-			.mblview{
-				margin-top: 25px;
-			}
-		}
+        /* For Mobile Portrait View */
+        @media screen and (max-device-width: 480px) {
 
-	</style>
+        }
+
+    </style>
 </head>
 
 <body>
 
-	<div class="up">
-		<a href="#" class="scrollup text-center"><i class="fas fa-chevron-up"></i></a>
-	</div>
+<div class="up">
+    <a class="scrollup text-center" href="#"><i class="fas fa-chevron-up"></i></a>
+</div>
 
 <!-- Start of header section
 	============================================= -->
-	<header class="main_header header_style_one" id="header_id">
-		<div class="header_top">
-			<div class="row">
-				<div class="col-md-6">
-					<div class="header_contact_info float-left ul-li">
-						<ul>
-							<li><i class="far fa-envelope"></i>  triumphant.creditlimited@gmail.com</li>
-							<li><i class="fas fa-phone"></i> 69226020</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /header_top -->
-		<div class="header_main_menu">
-			<div class="site_logo">
-				<a href="index.html"><img alt="" src="assets/img/logo/logo-1.png"></a>
-			</div>
-			<nav class="main_navigation ul-li manucolor">
-				<ul class="nav justify-content-end">
+<header class="main_header header_style_one" id="header_id">
+    <div class="header_top">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="header_contact_info float-left ul-li">
+                    <ul>
+                        <li><i class="far fa-envelope"></i> triumphant.creditlimited@gmail.com</li>
+                        <li><i class="fas fa-phone"></i> 69226020</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /header_top -->
+    <div class="header_main_menu">
+        <div class="site_logo">
+            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png" style="height: 60px"></a>
+        </div>
+        <nav class="main_navigation ul-li manucolor">
+            <ul class="nav justify-content-end">
 
-					<li class="dropdown">
-						<a href="#">貸款服務</a>
-						<ul class="dropdown-menu clearfix manucolor" >
-							<li><a href="tufreefast.html">免TU快速批核</a></li>
-							<li><a href="businesscash.html">業務資金周轉</a></li>
-							<li><a href="selfemployed.html">自僱人士貸款</a></li>
-							<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
-						</ul>
-					</li>
-					<li><a href="contactus.html">聯絡我們</a></li>
-				</ul>
-			</nav>
-			<!-- /nav Menu -->
-		</div>
-		<!-- /desktop version -->
-		<div class="mobile_menu">
-			<div class="mobile_menu_button open_mobile_menu">
-				<i class="fas fa-bars"></i>
-			</div>
-			<div class="mobile_menu_wrap">
-				<div class="mobile_menu_overlay open_mobile_menu"></div>
-				<div class="mobile_menu_content">
-					<div class="mobile_menu_close open_mobile_menu">
-						<i class="fas fa-window-close"></i>
-					</div>
-					<div class="m-brand-logo text-center">
-						<a href="index.html">
-							<img alt="" src="assets/img/logo/logo-1.png">
-						</a>
-					</div>
-					<nav class="main-navigation  clearfix ul-li">
-						<ul class="navbar-nav text-capitalize clearfix" id="main-nav">
+                <li class="dropdown">
+                    <a href="#">貸款服務</a>
+                    <ul class="dropdown-menu clearfix manucolor">
+                        <li><a href="tufreefast.html">免TU快速批核</a></li>
+                        <li><a href="businesscash.html">業務資金周轉</a></li>
+                        <li><a href="selfemployed.html">自僱人士貸款</a></li>
+                        <li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
+                    </ul>
+                </li>
+                <li><a href="contactus.html">聯絡我們</a></li>
+            </ul>
+        </nav>
+        <!-- /nav Menu -->
+    </div>
+    <!-- /desktop version -->
+    <div class="mobile_menu">
+        <div class="mobile_menu_button open_mobile_menu">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="mobile_menu_wrap">
+            <div class="mobile_menu_overlay open_mobile_menu"></div>
+            <div class="mobile_menu_content">
+                <div class="mobile_menu_close open_mobile_menu">
+                    <i class="fas fa-window-close"></i>
+                </div>
+                <div class="m-brand-logo text-center">
+                    <a href="index.html">
+                        <img alt="" src="assets/img/logo/logo-1.png">
+                    </a>
+                </div>
+                <nav class="main-navigation  clearfix ul-li">
+                    <ul class="navbar-nav text-capitalize clearfix" id="main-nav">
 
-							<li class="dropdown">
-								<a href="#">
-									貸款服務
-								</a>
-								<ul class="dropdown-menu">
-									<li><a href="tufreefast.html">免TU快速批核</a></li>
-									<li><a href="businesscash.html">業務資金周轉</a></li>
-									<li><a href="selfemployed.html">自僱人士貸款</a></li>
-									<li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
-								</ul>
-							</li>
-							<li><a href="contactus.html">聯絡我們</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-		<!-- /mobile menu -->
-	</header>
+                        <li class="dropdown">
+                            <a href="#">
+                                貸款服務
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="tufreefast.html">免TU快速批核</a></li>
+                                <li><a href="businesscash.html">業務資金周轉</a></li>
+                                <li><a href="selfemployed.html">自僱人士貸款</a></li>
+                                <li><a href="easyfastloan.html">卡數結餘轉戶</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="contactus.html">聯絡我們</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <!-- /mobile menu -->
+</header>
 <!-- End of header section
 	============================================= -->
 
 <!-- Start of breadcrumb section
 	============================================= -->
-	<section id="breadcrumb" class="breadcrumb_section relative-position" data-background="assets/img/background/brbg.jpg">
-		<div class="background_overlay"></div>
-		<div class="container">
-			<p class="breadcrumb_title">信貸記錄底子花，<br>
-				申請破產係唯一出路⋯⋯？</p>
-		</div>
-	</section>
+<section class="breadcrumb_section relative-position" data-background="assets/img/background/brbg.jpg" id="breadcrumb">
+    <div class="background_overlay"></div>
+    <div class="container">
+        <p class="breadcrumb_title">信貸記錄底子花，<br>
+            申請破產係唯一出路⋯⋯？</p>
+    </div>
+</section>
 <!-- End of breadcrumb section
 	============================================= -->
 
 <!-- Start of about page section
 	============================================= -->
-	<section id="about" class="about_page_section">
-		<div class="container">
-			<div class="about_page_content about_area_content">
-				<div class="row">
-					<div class="col-lg-6 col-md-12">
-						<div class="section_title_area headline pera-content">
-							<h2>
-								指尖上的貸款
-							</h2>
-							<div class="pt-5">
-								<p class="text-content">▰ 免TU<br>
-									▰ 真正免露面<br>
-									▰ 15mins快批<br>
-									▰貸款額高達10萬</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-6 col-md-12 mblview">
-						<div class="about_details_text">
-							<p class="text-content">
+<section class="about_page_section" id="about">
+    <div class="container">
+        <div class="about_page_content about_area_content">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-3">
+                    <div class="section_title_area headline pera-content">
+                        <h2>
+                            指尖上的貸款
+                        </h2>
+                        <div class="pt-5">
+                            <p class="text-content">
+                                ▰ 免TU<br>
+                                ▰ 真正免露面<br>
+                                ▰ 15mins快批<br>
+                                ▰ 貸款額高達10萬
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-3">
+                    <div class="about_details_text">
+                        <div class="section_title_area headline pera-content">
+                            <p class="text-content">
+                                ▰ 快速/短時間批核，非常適合急需資金週轉人士申請。<br>
+                                ▰ 對於過往有不良借貸記錄(TU較差)人士而言，免TU借貸可以有更大機會成功申請審批。<br>
+                                ▰ 申請免TU貸款完成還款後，有助提升過往信貸記錄評級
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about_btn">
+                        <a href="#">申請資格</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Start of about practice section
+============================================= -->
+<section class="about_practice_section" id="about_practice">
+    <div class="container">
+        <div class="about_practice_content">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="row">
+                        <div class="col-md-6 col-3 text-md-right my-auto">
+                            <img src="assets/img/logo/18+.png">
+                        </div>
+                        <div class="col-6 my-auto text-left" style="padding-left: 0 !important;">
+                            <h3>須年滿18歲</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="row">
+                        <div class="col-md-6 col-3 text-md-right my-auto">
+                            <img src="assets/img/logo/llocation.png">
+                        </div>
+                        <div class="col-6 my-auto text-left" style="padding-left: 0 !important;">
+                            <h3>必須是香港居民</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="row">
+                        <div class="col-md-6 col-3 text-md-right my-auto">
+                            <img src="assets/img/logo/loan.png">
+                        </div>
+                        <div class="col-6 my-auto text-left" style="padding-left: 0 !important;">
+                            <h3>有穩定工作及償還能力</h3>
+                        </div>
+                    </div>
 
-							▰ 快速/短時間批核，非常適合急需資金週轉人士申請。<br>
-
-							▰ 對於過往有不良借貸記錄(TU較差)人士而言，免TU借貸可以有更大機會成功申請審批。<br>
-
-							▰ 申請免TU貸款完成還款後，有助提升過往信貸記錄評級
-							</p>
-						</div>
-						<div class="about_btn">
-							<a  href="#">申請資格</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Start of about practice section
-	============================================= -->
-	<section id="about_practice" class="about_practice_section">
-		<div class="container">
-			<div class="about_practice_content">
-				<div class="row">
-					<div class="col-lg-4 col-md-6">
-						<div class="row">
-							<div class="col-md-6 col-3 text-md-right my-auto">
-								<img src="assets/img/logo/18+.png">
-							</div>
-							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
-								<h3>須年滿18歲</h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="row">
-							<div class="col-md-6 col-3 text-md-right my-auto">
-								<img src="assets/img/logo/llocation.png">
-							</div>
-							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
-								<h3>必須是香港居民</h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<div class="row">
-							<div class="col-md-6 col-3 text-md-right my-auto">
-								<img src="assets/img/logo/loan.png">
-							</div>
-							<div class="col-6 my-auto text-left"style="padding-left: 0 !important;">
-								<h3>有穩定工作及償還能力</h3>
-							</div>
-						</div>
-
-					</div>
-				</div>
-					</div>
-				</div>
-		<div class="container">
-			<div class="text-center pt-5">
-				<a href="contactus.html"><button type="button" value="Submit" class="btn btncolor">立即申請</button></a>
-			</div>
-		</div>
-	</section>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="text-center pt-5">
+            <a href="contactus.html">
+                <button class="btn btncolor" type="button" value="Submit">立即申請</button>
+            </a>
+        </div>
+    </div>
+</section>
 
 >
 
 <!-- Start footer section
 	============================================= -->
 
-	<div class="footer_copyright">
-		<div class="container">
-			<div class="footer_copyright_content">
-				<div class="row">
-					<div class="col-lg-4 col-md-12">
-						<div class="footer_logo text-center">
-							<a href="index.html"><img src="assets/img/logo/flogo-1.png" alt=""></a>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-12">
-						<div class="copyright_text text-right">
-							Copyright By @ <a href="%21.html#">Triumphant Credit Limited</a> - 2020
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="footer_copyright">
+    <div class="container">
+        <div class="footer_copyright_content">
+            <div class="row">
+                <div class="col-lg-4 col-md-12">
+                    <div class="footer_logo text-center">
+                        <a href="index.html"><img alt="" src="assets/img/logo/flogo-1.png"></a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12">
+                    <div class="copyright_text text-right">
+                        Copyright By @ <a href="%21.html#">Triumphant Credit Limited</a> - 2020
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- End  footer section
-	============================================= -->								
+	============================================= -->
 
-	<!-- For Js Library -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/popper.min.js"></script>
-	<script src="assets/js/owl.carousel.min.js"></script>
-	<script src="assets/js/jarallax.js"></script>
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="assets/js/appear.js"></script>
-	<script src="assets/js/wow.min.js"></script>
-	<script src="assets/js/circle-progress.js"></script>
-	<script src="assets/js/parallax-scroll.js"></script>
-	<script src="assets/js/jquery.counterup.min.js"></script>
-	<script src="assets/js/waypoints.min.js"></script>
-	<script src="assets/js/tilt.jquery.min.js"></script>
-	<script src="assets/js/script.js"></script>
-	<script src="assets/js/gmap3.min.js"></script>
-	<script src="http://maps.google.com/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>
+<!-- For Js Library -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/owl.carousel.min.js"></script>
+<script src="assets/js/jarallax.js"></script>
+<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="assets/js/appear.js"></script>
+<script src="assets/js/wow.min.js"></script>
+<script src="assets/js/circle-progress.js"></script>
+<script src="assets/js/parallax-scroll.js"></script>
+<script src="assets/js/jquery.counterup.min.js"></script>
+<script src="assets/js/waypoints.min.js"></script>
+<script src="assets/js/tilt.jquery.min.js"></script>
+<script src="assets/js/script.js"></script>
+<script src="assets/js/gmap3.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>
 </body>
 
-</html>	
+</html>
