--- a/businesscash.html
+++ b/businesscash.html
@@ -45,7 +45,7 @@
     <!-- /header_top -->
     <div class="header_main_menu">
         <div class="site_logo">
-            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png"></a>
+            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png" style="height: 60px"></a>
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
@@ -186,7 +186,7 @@
                 </div>
                 <div class="sub-button  text-uppercase">
                     <a href="contactus.html">
-                        <button type="submit" value="Submit">立即申請</button>
+                        <button type="button" value="Submit">立即申請</button>
                     </a>
                 </div>
             </form>
@@ -240,4 +240,4 @@
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC61_QVqt9LAhwFdlQmsNwi5aUJy9B2SyA"></script>
 </body>
 
-</html>			
+</html>
