--- a/selfemployed.html
+++ b/selfemployed.html
@@ -74,7 +74,7 @@
     <!-- /header_top -->
     <div class="header_main_menu">
         <div class="site_logo">
-            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png"></a>
+            <a href="index.html"><img alt="" src="assets/img/logo/logo-1.png" style="height: 60px"></a>
         </div>
         <nav class="main_navigation ul-li manucolor">
             <ul class="nav justify-content-end">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="m-brand-logo text-center">
                     <a href="index.html">
-                        <img alt="" src="assets/img/logo/logo-1.png">
+                        <img alt="" src="assets/img/logo/logo-1.png" >
                     </a>
                 </div>
                 <nav class="main-navigation  clearfix ul-li">
@@ -216,7 +216,7 @@
                     </div>
                 </div>
                 <div class="sub-button  text-uppercase">
-                    <a href="contactus.html"><button type="submit" value="Submit">立即申請</button></a>
+                    <a href="contactus.html"><button type="button" value="Submit">立即申請</button></a>
                 </div>
             </form>
         </div>
