--- a/easyfastloan.html
+++ b/easyfastloan.html
@@ -167,24 +167,24 @@
                                             <img src="assets/img/logo/repaypent.png">
                                             <h3 class="text-content mt-3">貸款特點</h3>
                                             <div class="pt-3 text-left">
-                                                <h3 class="text-content">
+                                                <h5 class="text-content" style="color: #aa8f57">
                                                     ・計算出最有效率的清卡數方案<br>
                                                     ・節省利息開支<br>
                                                     ・有助改善TU
                                                     ​<br>・易批快捷
-                                                </h3>
+                                                </h5>
                                             </div>
                                         </div>
                                         <div class="col-md-6 mt-5">
                                             <img src="assets/img/logo/document.png">
                                             <h3 class="text-content mt-3">所需文件：</h3>
                                             <div class="pt-3">
-                                                <h3 class="text-content text-left">
+                                                <h5 class="text-content text-left" style="color: #aa8f57">
                                                     ・月入不少於HK$5,000之薪金證明<br>
                                                     ・身份證<br>
                                                     ・住址證明<br>
                                                     ・銀行戶口月結單
-                                                </h3>
+                                                </h5>
                                             </div>
 
                                         </div>
