--- a/contactus.html
+++ b/contactus.html
@@ -136,7 +136,8 @@
                                 </h2>
                                 <ul>
                                     <li><i class="far fa-envelope"></i>  triumphant.creditlimited@gmail.com</li><br>
-                                    <li><i class="fas fa-phone"></i> 69226020</li>
+                                    <li><i class="fas fa-phone"></i> 69226020</li><br>
+                                    <li><i class="fas fa-map-marker"></i> 旺角亞皆老街33號美聯金融大廈18樓1801室</li>
                                 </ul>
                             </div>
                         </div>
@@ -220,7 +221,9 @@
 
 <!-- End of Faq Form
 	============================================= -->
-
+<div class="fixed-bottom">
+    <a href="https://wa.me/69226020" target="_blank"><img src="assets/img/whatsapp.png" class="img-fluid" alt="" style="height: 65px"/></a>
+</div>
 <!-- Start footer section
 	============================================= -->
 <div class="footer_copyright">
