--- a/selfemployed.html
+++ b/selfemployed.html
@@ -188,7 +188,9 @@
 </section>
 <!-- Edn of Faq section
 	============================================= -->
-
+<div class="fixed-bottom">
+    <a href="https://wa.me/69226020" target="_blank"><img src="assets/img/whatsapp.png" class="img-fluid" alt="" style="height: 65px"/></a>
+</div>
 <!-- Start of Faq Form
 	============================================= -->
 <section id="faq_form" class="faq_form_section">
