--- a/easyfastloan.html
+++ b/easyfastloan.html
@@ -214,7 +214,9 @@
 </section>
 <!-- End of Faq Form
 	============================================= -->
-
+<div class="fixed-bottom">
+    <a href="https://wa.me/69226020" target="_blank"><img src="assets/img/whatsapp.png" class="img-fluid" alt="" style="height: 65px"/></a>
+</div>
 <!-- Start footer section
 	============================================= -->
 <div class="footer_copyright">
