--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
 <!-- End of testimonial subscribe section
 	============================================= -->
 
+<div class="fixed-bottom">
+    <a href="https://wa.me/69226020" target="_blank"><img src="assets/img/whatsapp.png" class="img-fluid" alt="" style="height: 65px"/></a>
+</div>
 
 <!-- Start footer section
 	============================================= -->
