--- a/tufreefast.html
+++ b/tufreefast.html
@@ -221,7 +221,9 @@
     </div>
 </section>
 
->
+<div class="fixed-bottom">
+    <a href="https://wa.me/69226020" target="_blank"><img src="assets/img/whatsapp.png" class="img-fluid" alt="" style="height: 65px"/></a>
+</div>
 
 <!-- Start footer section
 	============================================= -->
